pulumi/atlantic-ocean/yaml/uptime-kuma/depolyment.yaml
---

apiVersion:                   apps/v1
kind:                         Deployment
metadata:
  name:                       uptime-kuma
  namespace:                  pulumi-apps
  labels:
    app.kubernetes.io/name:   uptime-kuma
    app.kubernetes.io/instance: uptime-kuma-01
  namespace:                  pulumi-apps
spec:
  replicas:                   1
  selector:
    matchLabels:
      app.kubernetes.io/name: uptime-kuma
      app.kubernetes.io/instance: uptime-kuma-01
  template:
    metadata:
      labels:
        app.kubernetes.io/name: uptime-kuma
        app.kubernetes.io/instance: uptime-kuma-01
    spec:
      containers:
        - name:               uptime-kuma
          image:              louislam/uptime-kuma:1
          imagePullPolicy:    "IfNotPresent"
          resources:
            requests:
              memory:         "64Mi"
              cpu:            "250m"
            limits:
              memory:         "128Mi"
              cpu:            "500m"
          ports:
            - name:           web-ui
              containerPort:  3001
          volumeMounts:
            - name:           uptime-kuma-app-data
              mountPath:      /app/data
      volumes:
        - name:               uptime-kuma-app-data
          persistentVolumeClaim:
            claimName:        pvc-uptime-kuma
