pulumi/atlantic-ocean/yaml/uptime-kuma/ingress.yaml
---

apiVersion:               traefik.containo.us/v1alpha1
kind:                     IngressRoute
metadata:
  name:                   kuma-olaf-radicke-de
spec:
  entryPoints:
                          - websecure
  routes:
    - match:              Host(`kuma.olaf-radicke.de`) && PathPrefix(`/`)
      kind:               Rule
      services:
        - name:           uptime-kuma
          port:           80
      middlewares:
        - name:           kuma-olaf-radicke-de
  tls:
    secretName:           kuma-olaf-radicke-de

---

apiVersion:               traefik.containo.us/v1alpha1
kind:                     Middleware
metadata:
  name:                   kuma-olaf-radicke-de
spec:
  redirectScheme:
    scheme:               https
    permanent:            true
